div white space fixed

--- a/CookYStories_Frontend/src/App/css/App.css
+++ b/CookYStories_Frontend/src/App/css/App.css
@@ -3,6 +3,10 @@
   background-color: #faf9f1;
 }
 
+body {
+  background-color: #282c34;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
